syntax = "proto3";

option csharp_namespace = "GrpcTest.Api.Protos";

import "Enums.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service MeterReadingService{
	rpc AddReading(ReadingPacket) returns (StatusMessage);
	rpc SendDiagnostics(stream ReadingMessage) returns (google.protobuf.Empty);
}

message ReadingPacket{
	repeated .ReadingMessage readings = 1;
	string notes = 2;
	ReadingStatus status = 3;
}

message ReadingMessage{
	int32 customerId = 1;
	int32 readingValue = 2;
	google.protobuf.Timestamp readingTime = 5;
	reserved 3, 4;
	reserved "status";
}

message StatusMessage{
	string message = 1;
	ReadingStatus status = 2;
}
